updating copy, fixing timeline bullet alignment, adding parallax effect and images

--- a/public/static/css/columns.css
+++ b/public/static/css/columns.css
@@ -1,8 +1,7 @@
 .column-4 {
-	display: block;
-	position: relative;
-    float: left;
+	display: inline-block;
 
-    width: 30%;
-    margin: 0 3% 0 0;
+    margin: 0 0 3% 0;
+
+    vertical-align: top;
 }
