--- a/public/static/css/timeline.css
+++ b/public/static/css/timeline.css
@@ -40,7 +40,6 @@
   padding-top: 50px;
   background: #fff;
   font: normal 16px/1.5 "Helvetica Neue", sans-serif;
-  background: #456990;
   color: #fff;
   padding-bottom: 50px;
 }
@@ -65,7 +64,7 @@
 
 .timeline__block {
   position: relative;
-  bottom: 0;
+  bottom: -50px;
   width: 400px;
   padding: 15px;
   background: #336699;
